--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "4.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@fontsource/roboto": "^4.5.0",
-    "@material-ui/core": "^5.0.0-beta.1",
-    "@material-ui/icons": "^5.0.0-beta.1",
-    "@material-ui/styles": "^5.0.0-beta.1",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "clsx": "latest",
@@ -26,10 +20,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "autoprefixer": "^10.3.1",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.7",
     "typescript": "^4.3.5"
   }
 }
