--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "nextjs",
   "version": "4.0.0",
   "private": true,
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
+  },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.5.0",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "clsx": "latest",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
-    "react-dom": "latest"
-  },
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
+    "react-dom": "latest",
+    "stripe": "^8.169.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.3",
