WIP nav and profile tinkering

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "stripe": "^8.169.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
+    "@tailwindcss/forms": "^0.3.3",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^10.3.1",
