--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "seed": "ts-node prisma/seed/seed.ts",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/styles": "^5.0.0-beta.1",
+    "@prisma/client": "^2.30.2",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "clsx": "latest",
@@ -33,6 +35,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
+    "prisma": "^2.30.2",
+    "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
 }
