--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next",
+    "prebuild": "prisma generate",
     "build": "next build",
     "start": "next start",
     "seed": "ts-node prisma/seed/seed.ts",
