--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "seed": "ts-node prisma/seed/seed.ts",
-    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
+    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
+    "update-db": "prisma migrate dev && prisma generate",
+    "prisma-format": "prisma format"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.5.0",
@@ -21,6 +23,7 @@
     "@prisma/client": "^2.30.2",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
+    "axios": "^0.21.4",
     "clsx": "latest",
     "discord.js": "^12.5.3",
     "next": "latest",
