--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "jsx": "preserve",
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/first-time-user.tsx"],
   "exclude": ["node_modules"]
 }
