--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.31.0",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
+    "postcss": "^8.3.11",
     "prettier": "^2.3.2",
     "prisma": "^2.30.2",
+    "tailwindcss": "^2.2.19",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
