Add prettier script

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "seed": "ts-node prisma/seed/seed.ts",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
     "update-db": "prisma migrate dev && prisma generate",
+    "prisma-generate": "prisma generate",
     "prisma-studio": "prisma studio",
-    "prisma-format": "prisma format"
+    "prisma-format": "prisma format",
+    "prettier-format": "prettier format"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.5.0",
