--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next",
     "prebuild": "prisma generate",
     "build": "next build",
-    "start": "next start",
+    "start": "npm run dev",
     "seed": "ts-node prisma/seed/seed.ts",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
     "update-db": "prisma migrate dev && prisma generate",
