--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/styles": "^5.0.0-beta.1",
     "@prisma/client": "^2.30.2",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "axios": "^0.21.4",
     "clsx": "latest",
     "discord.js": "^12.5.3",
+    "moment": "^2.29.1",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
