--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prisma-studio": "prisma studio",
     "prisma-format": "prisma format",
     "prettier-check": "prettier --check ./src",
-    "prettier-format": "prettier --write ./src"
+    "prettier-format": "prettier --write ./src",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.5.0",
@@ -49,6 +50,7 @@
     "prisma": "^2.30.2",
     "tailwindcss": "^2.2.19",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "husky": "^7.0.4"
   }
 }
