--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/styles": "^5.0.0-beta.1",
     "@prisma/client": "^2.30.2",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.21.1",
     "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
