--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "postcss": "^8.3.11",
     "prettier": "^2.3.2",
     "prisma": "^2.30.2",
     "tailwindcss": "^2.2.19",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5",
-    "husky": "^7.0.4"
+    "typescript": "^4.3.5"
   }
 }
