--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "tailwindcss": "^2.2.19",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
