Added prisma scripts

--- a/package.json
+++ b/package.json
@@ -1,67 +1,70 @@
 {
-  "name": "nextjs",
-  "version": "4.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next",
-    "prebuild": "prisma generate",
-    "build": "next build",
-    "start": "npm run dev",
-    "seed": "ts-node prisma/seed/seed.ts",
-    "dump": "ts-node prisma/seed/dump.ts",
-    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
-    "update-db": "prisma migrate dev && prisma generate",
-    "prisma-generate": "prisma generate",
-    "prisma-studio": "prisma studio",
-    "prisma-format": "prisma format",
-    "prettier-check": "prettier --check ./src",
-    "prettier-format": "prettier --write ./src",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
-  },
-  "dependencies": {
-    "@auth0/nextjs-auth0": "^1.5.0",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@fontsource/roboto": "^4.5.0",
-    "@material-ui/core": "^5.0.0-beta.1",
-    "@material-ui/icons": "^5.0.0-beta.1",
-    "@material-ui/styles": "^5.0.0-beta.1",
-    "@prisma/client": "^2.30.2",
-    "@stripe/react-stripe-js": "^1.6.0",
-    "@stripe/stripe-js": "^1.21.1",
-    "@tailwindcss/typography": "^0.4.1",
-    "@types/node": "^16.3.3",
-    "@types/react": "^17.0.14",
-    "axios": "^0.21.4",
-    "clsx": "latest",
-    "discord.js": "^12.5.3",
-    "moment": "^2.29.1",
-    "next": "latest",
-    "prop-types": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "stripe": "^8.191.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.1.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.1.2",
-    "postcss": "^8.3.11",
-    "prettier": "^2.3.2",
-    "prisma": "^2.30.2",
-    "tailwindcss": "^2.2.19",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
-  }
+	"name": "nextjs",
+	"version": "4.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "next",
+		"prebuild": "prisma generate",
+		"build": "next build",
+		"start": "npm run dev",
+		"seed": "ts-node prisma/seed/seed.ts",
+		"dump": "ts-node prisma/seed/dump.ts",
+		"post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
+		"update-db": "prisma migrate dev && prisma generate",
+		"prisma-generate": "prisma generate",
+		"prisma-studio": "prisma studio",
+		"prisma-format": "prisma format",
+		"prettier-check": "prettier --check ./src",
+		"prettier-format": "prettier --write ./src",
+		"prepare": "husky install",
+		"lint-staged": "lint-staged",
+		"prisma-db-push": "prisma db push",
+		"prisma-status": "prisma migrate status",
+		"prisma-migrate": "prisma migrate dev"
+	},
+	"dependencies": {
+		"@auth0/nextjs-auth0": "^1.5.0",
+		"@emotion/react": "^11.4.0",
+		"@emotion/styled": "^11.3.0",
+		"@fontsource/roboto": "^4.5.0",
+		"@material-ui/core": "^5.0.0-beta.1",
+		"@material-ui/icons": "^5.0.0-beta.1",
+		"@material-ui/styles": "^5.0.0-beta.1",
+		"@prisma/client": "^2.30.2",
+		"@stripe/react-stripe-js": "^1.6.0",
+		"@stripe/stripe-js": "^1.21.1",
+		"@tailwindcss/typography": "^0.4.1",
+		"@types/node": "^16.3.3",
+		"@types/react": "^17.0.14",
+		"axios": "^0.21.4",
+		"clsx": "latest",
+		"discord.js": "^12.5.3",
+		"moment": "^2.29.1",
+		"next": "latest",
+		"prop-types": "latest",
+		"react": "latest",
+		"react-dom": "latest",
+		"stripe": "^8.191.0"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^4.28.3",
+		"@typescript-eslint/parser": "^4.28.3",
+		"autoprefixer": "^10.4.0",
+		"eslint": "^7.31.0",
+		"eslint-config-next": "^11.1.2",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-react": "^7.24.0",
+		"husky": "^7.0.4",
+		"lint-staged": "^12.1.2",
+		"postcss": "^8.3.11",
+		"prettier": "^2.3.2",
+		"prisma": "^2.30.2",
+		"tailwindcss": "^2.2.19",
+		"ts-node": "^10.2.1",
+		"typescript": "^4.3.5"
+	},
+	"lint-staged": {
+		"*.js": "eslint --cache --fix",
+		"*.{js,css,md}": "prettier --write"
+	}
 }
