--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint-staged": "lint-staged",
     "prisma-db-push": "prisma db push",
     "prisma-status": "prisma migrate status",
-    "prisma-migrate": "prisma migrate dev"
+    "prisma-migrate": "prisma migrate dev",
+    "prisma": "prisma"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.5.0",
