--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,3 @@
 {
-  "*.js": "eslint --fix",
-  "*.jsx": "eslint --fix",
-  "*.ts": "eslint --fix",
-  "*.tsx": "eslint --fix",
-  "*.{json,md}": "prettier --write"
+  "*": "npm run prettier-format"
 }
