--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@prisma/client": "^3.6.0",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.21.1",
-    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "axios": "^0.21.4",
@@ -49,6 +48,10 @@
     "stripe": "^8.191.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^10.4.0",
@@ -58,10 +61,10 @@
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.4",
     "prettier": "^2.3.2",
     "prisma": "^3.6.0",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
