--- a/package.json
+++ b/package.json
@@ -40,15 +40,20 @@
     "axios": "^0.21.4",
     "clsx": "latest",
     "discord.js": "^12.5.3",
+    "dompurify": "^2.3.4",
+    "draft-convert": "^2.1.12",
+    "draft-js": "^0.11.7",
     "moment": "^2.29.1",
     "next": "latest",
     "prop-types": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "sendbird-uikit": "^2.5.0",
     "stripe": "^8.191.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.7",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^10.4.0",
