--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dompurify": "^2.3.4",
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "latest",
     "prop-types": "latest",
@@ -58,6 +59,7 @@
     "@types/dompurify": "^2.3.2",
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.7",
+    "@types/lodash": "^4.14.178",
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
