--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.0",
+    "@google-cloud/bigquery": "^5.10.0",
+    "@google-cloud/pubsub": "^2.18.4",
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/styles": "^5.0.0-beta.1",
