--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "latest",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
+    "cors": "^2.8.5",
     "discord.js": "^12.5.3",
     "dompurify": "^2.3.4",
     "draft-convert": "^2.1.12",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
+    "@types/cors": "^2.8.12",
     "@types/dompurify": "^2.3.2",
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.7",
