--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,6 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm
+
+# Sentry
+.sentryclirc
