--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/styles": "^5.0.0-beta.1",
     "@prisma/client": "^3.6.0",
+    "@sentry/nextjs": "^6.17.1",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.21.1",
     "@tailwindcss/typography": "^0.4.1",
@@ -54,7 +55,7 @@
     "draft-js": "^0.11.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "next": "latest",
+    "next": "^12.0.4",
     "prop-types": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
