--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
+    "airtable": "^0.11.2",
     "axios": "^0.21.4",
     "clsx": "latest",
     "cookie-cutter": "^0.2.0",
