--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,11 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "unused-imports"],
+  "settings": {
+    "react": {
+      "version": "17.0"
+    }
+  },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
