--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "@auth0/nextjs-auth0": "^1.5.0",
     "@draft-js-plugins/editor": "^4.1.1",
     "@draft-js-plugins/linkify": "^4.2.0",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.8.0",
+    "@emotion/styled": "^11.8.0",
     "@fontsource/roboto": "^4.5.0",
     "@google-cloud/bigquery": "^5.10.0",
     "@google-cloud/pubsub": "^2.18.4",
-    "@material-ui/core": "^5.0.0-beta.1",
-    "@material-ui/icons": "^5.0.0-beta.1",
-    "@material-ui/styles": "^5.0.0-beta.1",
+    "@mui/base": "^5.0.0-alpha.69",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
+    "@mui/styles": "^5.4.2",
+    "@mui/system": "^5.4.3",
     "@prisma/client": "^3.6.0",
     "@sentry/nextjs": "^6.17.1",
     "@stripe/react-stripe-js": "^1.6.0",
@@ -56,7 +58,7 @@
     "draft-js": "^0.11.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "next": "^12.0.4",
+    "next": "~12.1.0",
     "prop-types": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -74,14 +76,14 @@
     "@types/lodash": "^4.14.178",
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "~5.12.1",
+    "@typescript-eslint/parser": "~5.12.1",
     "autoprefixer": "^10.4.0",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.1.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint": "~8.9.0",
+    "eslint-config-next": "~12.1.0",
+    "eslint-config-prettier": "~8.4.0",
+    "eslint-plugin-react": "~7.28.0",
+    "eslint-plugin-unused-imports": "~2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "postcss": "^8.3.11",
@@ -89,7 +91,7 @@
     "prisma": "^3.6.0",
     "tailwindcss": "^2.2.19",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
+    "typescript": "~4.5.5"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx,json}": "prettier --write"
