--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dompurify": "^2.3.4",
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
+    "immutable": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "~12.1.0",
