--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "prisma-status": "prisma migrate status",
     "prisma-migrate": "prisma migrate dev",
     "prisma": "prisma",
-    "prepare": "npx husky install",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
@@ -37,6 +36,7 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@mui/styles": "^5.4.2",
+    "@notionhq/client": "^1.0.2",
     "@prisma/client": "^3.6.0",
     "@sentry/nextjs": "^6.17.1",
     "@stripe/react-stripe-js": "^1.6.0",
