--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,4 @@
 defaults.url=https://sentry.io/
-defaults.org=cottage-software-inc
-defaults.project=cottage-software-inc
-cli.executable=../../.npm/_npx/25475/lib/node_modules/@sentry/wizard/node_modules/@sentry/cli/bin/sentry-cli
+defaults.org=cottage-software-inc-kh
+defaults.project=cottage-software-inc-kh
+cli.executable=../../home/gitpod/.npm/_npx/a8388072043b4cbc/node_modules/@sentry/cli/bin/sentry-cli
